<resources>
    <string name="app_name">Appointio</string>
    <string name="server_client_id">1067644233325-vorct2aqrg262vs9o070n5avkqghjkb0.apps.googleusercontent.com</string>
    <string name="yelp_api_key">QvovY7ARu_g-PbylLUKjbNTaNRYScXpmYZYsJQ3kXrYiXcLDRoDw9BKON_MW8oYWwh5EQObD6nDoZ_fagp5IN3eTJe-ITcjtUnfvILCKixiIr8keyjDd-zfoVoXCXnYx</string>
    <string name="action_customer">CUSTOMER</string>
    <string name="action_business">BUSINESS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_business">Business</string>
    <string name="prompt_street">Street Address</string>
    <string name="prompt_search_name">Search name</string>
    <string name="prompt_search_location">Search location</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">CREATE ACCOUNT</string>
    <string name="action_next">NEXT</string>
    <string name="action_finish">FINISH</string>
    <string name="action_search">SEARCH</string>
    <string name="text_or">OR</string>
    <string name="title_account">My Account</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_create_account">Create Account</string>
</resources>
